--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,8 +35,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   http: ^1.4.0
+  pdfrx: ^1.1.29
   smooth_page_indicator: ^1.2.1
-  syncfusion_flutter_pdfviewer: ^29.2.4
 
 dev_dependencies:
   flutter_test:
