--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,9 +34,12 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
+  flutter_blurhash: ^0.9.1
   flutter_dotenv: ^5.2.1
   http: ^1.4.0
   pdfrx: ^1.1.29
+  shared_preferences: ^2.5.3
+  shimmer: ^3.0.0
   smooth_page_indicator: ^1.2.1
 
 dev_dependencies:
