--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   flutter_blurhash: ^0.9.1
   flutter_dotenv: ^5.2.1
+  flutter_launcher_icons: ^0.14.4
   http: ^1.4.0
   pdfrx: ^1.1.29
   shared_preferences: ^2.5.3
