--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -1,11 +1,10 @@
-# .github/workflows/build-and-release.yml
 name: Build and Release Flutter App
 
 on:
   push:
     tags:
-      - 'v*.*.*'  # Triggers on version tags like v1.0.0
-  workflow_dispatch:  # Allows manual trigger
+      - 'v*.*.*' # Triggers on version tags like v1.0.0
+  workflow_dispatch: # Allows manual trigger
     inputs:
       version:
         description: 'Release version'
@@ -29,8 +28,9 @@ jobs:
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.27.0'
+          flutter-version: '3.35.1'
           channel: 'stable'
+          cache: true
 
       - name: Get dependencies
         run: flutter pub get
@@ -62,8 +62,9 @@ jobs:
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.27.0'
+          flutter-version: '3.35.1'
           channel: 'stable'
+          cache: true
 
       - name: Get dependencies
         run: flutter pub get
@@ -95,8 +96,9 @@ jobs:
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.27.0'
+          flutter-version: '3.35.1'
           channel: 'stable'
+          cache: true
 
       - name: Enable Windows desktop
         run: flutter config --enable-windows-desktop
@@ -131,13 +133,14 @@ jobs:
       - name: Install Linux dependencies
         run: |
           sudo apt-get update -y
-          sudo apt-get install -y ninja-build libgtk-3-dev
+          sudo apt-get install -y ninja-build libgtk-3-dev libblkid-dev liblzma-dev clang cmake pkg-config
 
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.27.0'
+          flutter-version: '3.35.1'
           channel: 'stable'
+          cache: true
 
       - name: Enable Linux desktop
         run: flutter config --enable-linux-desktop
@@ -261,8 +264,7 @@ jobs:
           tag_name: ${{ steps.version.outputs.version }}
           name: AI PDF Viewer ${{ steps.version.outputs.version }}
           body_path: RELEASE_NOTES.md
-          files: |
-            ./release-files/*
+          files: ./release-files/*
           draft: false
           prerelease: false
         env:
