--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -60,55 +60,6 @@ jobs:
             build/app/outputs/flutter-apk/app-release.apk
             build/app/outputs/bundle/release/app-release.aab
 
-  # Build for iOS
-  build-ios:
-    runs-on: macos-latest
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Setup Java
-        uses: actions/setup-java@v4
-        with:
-          distribution: 'zulu'
-          java-version: '18.x'
-
-      - name: Setup Flutter
-        uses: subosito/flutter-action@v2
-        with:
-          channel: 'stable'
-          cache: true
-
-      - name: Accept Android SDK licenses
-        run: |
-          yes | $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager --licenses || true
-
-      - name: Create .env file
-        run: |
-          echo "API_KEY=${{ secrets.API_KEY }}" >> .env
-          echo "BASE_URL=${{ secrets.BASE_URL }}" >> .env
-
-      - name: Get dependencies
-        run: flutter pub get
-
-      - name: Check for lints
-        run: flutter analyze
-
-      - name: Build iOS IPA
-        run: |
-          flutter build ios --release --no-codesign
-
-      - name: Compress iOS build
-        run: |
-          cd build
-          tar -czf ios_build.tar.gz ios
-
-      - name: Upload iOS artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: ios-builds
-          path: build/ios_build.tar.gz
-
   # Build for Windows
   build-windows:
     runs-on: windows-latest
@@ -198,7 +149,7 @@ jobs:
 
   # Create Release
   create-release:
-    needs: [build-android, build-ios, build-windows, build-linux]
+    needs: [build-android, build-windows, build-linux]
     runs-on: ubuntu-latest
     permissions:
       contents: write
@@ -233,9 +184,6 @@ jobs:
           cp ./artifacts/android-builds/app-release.apk ./release-files/ai_pdf_viewer-${{ steps.version.outputs.version }}-android.apk
           cp ./artifacts/android-builds/app-release.aab ./release-files/ai_pdf_viewer-${{ steps.version.outputs.version }}-android.aab
           
-          # iOS files
-          cp ./artifacts/ios-builds/ios_build.tar.gz ./release-files/ai_pdf_viewer-${{ steps.version.outputs.version }}-ios.tar.gz
-          
           # Windows files
           cp ./artifacts/windows-builds/windows-release.zip ./release-files/ai_pdf_viewer-${{ steps.version.outputs.version }}-windows.zip
           
@@ -252,9 +200,6 @@ jobs:
           ### Android
           - **APK**: `ai_pdf_viewer-${{ steps.version.outputs.version }}-android.apk` - Direct installation file
           - **AAB**: `ai_pdf_viewer-${{ steps.version.outputs.version }}-android.aab` - For Google Play Store
-          
-          ### iOS
-          - **TAR.GZ**: `ai_pdf_viewer-${{ steps.version.outputs.version }}-ios.tar.gz` - iOS build archive (requires proper code signing for device installation)
           
           ### Windows
           - **ZIP**: `ai_pdf_viewer-${{ steps.version.outputs.version }}-windows.zip` - Extract and run the executable
@@ -277,13 +222,6 @@ jobs:
           1. Download and extract the tar.gz file
           2. Make the executable file runnable: `chmod +x ai_pdf_viewer`
           3. Run the application: `./ai_pdf_viewer`
-          
-          ### iOS
-          Note: The iOS build is not code-signed. For actual iOS deployment, you'll need to:
-          1. Extract the tar.gz file
-          2. Have an Apple Developer account
-          3. Code sign the app properly
-          4. Distribute through App Store or TestFlight
           
           ---
           
